--- a/BikesNBrewsV2/Views/Breweries/GetZip.cshtml
+++ b/BikesNBrewsV2/Views/Breweries/GetZip.cshtml
@@ -4,40 +4,44 @@
 @{
 }
 <div class="text-center">
-    <h1>
+    <h1 class="form-title">
         Starting Address
     </h1>
 
 </div>
 <div class="container">
     <div class="row">
-        <div class="col-3"></div>
-        <div class="col-6">
+        <div class="col-4">
+            <img class="img-road img-right" src="https://thumbs.dreamstime.com/z/long-winding-road-2706478.jpg" />
+        </div>
+        <div class="col-4 text-center">
             <form asp-action="GetByZip">
-                <div>
-                    <label for="Address">Street:</label>
-                    <input type="text" id="Address" name="Address" />
+                <div class="mb-3">
+                    <label  class="form-label" for="Address">Street: </label>
+                    <input class="form-control" type="text" id="Address" name="Address" />
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="City">City: </label>
+                    <input class="form-control" type="text" id="City" name="City" />
+                </div>
+                <div class="mb-3"> 
+                    <label class="form-label" for="State">State: </label>
+                    <input class="form-control" type="text" id="State" name="State" />
+                </div>
+                <div class="mb-3">
+                    <label class="form-label" for="Zip">Zip: </label>
+                    <input class="form-control" id="Zip" name="Zip" type="text" />
                 </div>
                 <div>
-                    <label for="City">City:</label>
-                    <input  type="text" id="City" name="City" />
-                </div>
-                <div> 
-                    <label for="State">State: </label>
-                    <input  type="text" id="State" name="State" />
-                </div>
-                <div>
-                    <label for="Zip">Zip Code: </label>
-                    <input  id="Zip" name="Zip" type="text" />
-                </div>
-                <div>
-                <input type="submit" value="Submit" />
+                <input type="submit" class="btn btn-primary" value="Submit" />
                 </div>
             </form>
-            <div class="col-3">
-
-            </div>
         </div>
+        <div class="col-4">
+                <img class="img-road img-left" src="https://thumbs.dreamstime.com/z/long-winding-road-2706478.jpg" />
+
+        </div>
+
     </div>
 
 </div>
