--- a/BikesNBrewsV2/wwwroot/css/site.css
+++ b/BikesNBrewsV2/wwwroot/css/site.css
@@ -57,3 +57,20 @@ h1{
 .navbar {
     background-color: #f3e39f;
 }
+.img-road{
+    width: 100%;
+    height: 100%;
+    margin: 0 auto 0 auto;
+}
+.form-title{
+    margin-bottom: 25px;
+}
+.img-left{
+    float: left;
+
+}
+
+img-right{
+    float: right;
+
+}
